--- a/FuturesMaster/FuturesMaster.csproj
+++ b/FuturesMaster/FuturesMaster.csproj
@@ -115,9 +115,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FM.Lib\WC.Lib.csproj">
+    <ProjectReference Include="..\..\..\Visual Studio 2017\Projects\CommonLibs\Z.Lib\Z.Lib.csproj">
       <Project>{7cd2b0a7-e349-4699-bc6d-477a225222bd}</Project>
-      <Name>WC.Lib</Name>
+      <Name>Z.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
